--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "get-tex-sources": "wget -N http://ctan.math.washington.edu/tex-archive/systems/knuth/dist/tex/tex.web && wget -O etex.ch 'https://tug.org/svn/texlive/trunk/Build/source/texk/web2c/etexdir/etex.ch?revision=32727&view=co'",
     "build": "jison parser.jison",
     "generate-wasm": "tie -m etex.web tex.web etex.ch && tangle -underline etex.web etex.sys && node compile.js etex.p",
-    "get-initex-deps": "wget -O tikzlibraryarrows.meta.code.tex https://raw.githubusercontent.com/pgf-tikz/pgf/master/tex/generic/pgf/libraries/pgflibraryarrows.meta.code.tex && wget -N https://raw.githubusercontent.com/jhoobergs/dvi2html/master/pgfsys-ximera.def"
+    "initex": "node initex.js"
   },
   "author": "Jim Fowler",
   "license": "GPL-3.0",
