--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "scripts": {
     "test": "node spec/run-tests.js",
     "build": "jison parser.jison",
-    "generate-wasm": "tie -m tex.web texk/tex.web etexdir/etex.ch date.ch && tangle -underline tex.web etex.sys && node compile.js tex.p out.wasm",
-    "initex": "node initex.js",
-    "optimize-wasm": "wasm-opt -O out.wasm -o tex.wasm",
-    "generate-core": "npm run build && npm run generate-wasm && npm run optimize-wasm && node initex.js"
+    "generate-wasm": "tie -m tex.web texk/tex.web etexdir/etex.ch date.ch tex-final-end.ch && tangle -underline tex.web etex.sys && node compile.js tex.p out.wasm",
+    "asyncify-wasm": "wasm-opt --asyncify --pass-arg=asyncify-ignore-indirect --pass-arg=asyncify-imports@library.reset -O4 out.wasm -o tex.wasm",
+    "generate-core": "npm run build && npm run generate-wasm && npm run asyncify-wasm && node initex.js"
   },
   "author": "Jim Fowler",
   "license": "GPL-3.0",
   "dependencies": {
-    "binaryen": "^89.0.0",
+    "binaryen": "^99.0.0",
     "flex-js": "^1.0.4",
     "jison": "^0.4.18",
     "pegjs": "^0.10.0",
